--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <input class="cinpdate" type="date" value="check-In">
     <input  class="cinpdate" type="time" value="check-In">
     <input  class="cinpdate" type="time" value="check-In">
-    <div ><button class="btn" onclick="">Search</button></div></div>
+    <div ><button class="btn" onclick="">Search.</button></div></div>
 </div>
 <div class="mySlides" style="width:95%; height: 240px; display: one;"  >
     <div class="box3">
