--- a/expediaData.html
+++ b/expediaData.html
@@ -23,7 +23,7 @@
       price:4489,
       date:"Mon,21 Feb - Web,23Feb",
       line:"",
-      night:"per night",
+      night:"Reserve",
     },
     {
       id: 5,
@@ -36,7 +36,7 @@
       price:5359,
       date:"Web, 23 - Fri,23 Feb",
       line:"",
-      night:"per night",
+      night:"Reserve",
     },
     {
       id: 5,
@@ -49,7 +49,7 @@
       price:5794,
       date:"Mon,11 Apr - Wed,13Apr",
       line:"",
-      night:"per night",
+      night:"Reserve",
     },
     {
       id: 5,
@@ -62,7 +62,7 @@
       price:5985,
       date:"Mon,11 Apr - Wed,13Apr",
       line:"",
-      night:"per night",
+      night:"Reserve",
     },
     {
       id: 5,
@@ -75,7 +75,7 @@
       price:7268,
       date:"Mon,11 Apr - Wed,13Apr",
       line:"",
-      night:"per night",
+      night:"Reserve",
     },
     {
       id: 5,
@@ -88,7 +88,7 @@
       price:3915,
       date:"Mon,11 Apr - Wed,13Apr",
       line:"",
-      night:"per night",
+      night:"Reserve",
     },
     {
       id: 5,
@@ -101,7 +101,7 @@
       price:4749,
       date:"Fri, 11 Mar - Sat,13 Mar",
       line:"",
-      night:"per night",
+      night:"Reserve",
     },
     {
       id: 5,
@@ -114,7 +114,7 @@
       price:5742,
       date:"Fri,25 - Sun, 27 Feb",
       line:"",
-      night:"per night",
+      night:"Reserve",
     },
     {
       id: 5,
@@ -127,7 +127,7 @@
       price:4112,
       date:"Sat, 19 Feb - Mon, 21 feb",
       line:"",
-      night:"per night",
+      night:"Reserve",
     },
     {
       id: 5,
@@ -140,7 +140,7 @@
       price:2700,
       date:"Fri, 1 Apr - Sun, 3 Apr",
       line:"",
-      night:"per night",
+      night:"Reserve",
     },
     {
       id: 5,
@@ -153,7 +153,7 @@
       price:3900,
       date:"Sat, 12 Mar - Mon 14 Mar",
       line:"",
-      night:"per night",
+      night:"Reserve",
     },
     {
       id: 5,
@@ -166,7 +166,7 @@
       price:6750,
       date:"Fri, 18 Feb- Sun,20 Feb",
       line:"",
-      night:"per night",
+      night:"Reserve",
     },
     {
       id: 5,
@@ -179,7 +179,7 @@
       price:5130,
       date:"Fri, 18 Feb - Sun,20 Feb",
       line:"",
-      night:"per night",
+      night:"Reserve",
     },
     {
       id: 5,
@@ -192,7 +192,7 @@
       price:3528,
       date:"Sat, 12 Mar - Mon, 14 Mar",
       line:"",
-      night:"per night",
+      night:"Reserve",
     },
     {
       id: 5,
@@ -205,7 +205,7 @@
       price:4634,
       date:"Web, 23 Feb - Fri,25 Feb",
       line:"",
-      night:"per night",
+      night:"Reserve",
     },
     {
       id: 5,
@@ -218,7 +218,7 @@
       price:5558,
       date:"Mon, 21 Feb - Web,23 Feb",
       line:"",
-      night:"per night",
+      night:"Reserve",
     },
     {
       id: 5,
@@ -231,7 +231,7 @@
       price:23940,
       date:"Mon, 21 Feb - Web,23 Feb",
       line:"",
-      night:"per night",
+      night:"Reserve",
     },
     {
       id: 5,
@@ -244,7 +244,7 @@
       price:5265,
       date:"Thu, 31 Mar - Sat, 2 Apr",
       line:"",
-      night:"per night",
+      night:"Reserve",
     },
     {
       id: 5,
@@ -257,7 +257,7 @@
       price:6412,
       date:"Fri, 11 Mar - Sun,13 Mar",
       line:"",
-      night:"per night",
+      night:"Reserve",
     },
     {
       id: 5,
@@ -270,7 +270,7 @@
       price:11115,
       date:"Mon, 28 Feb - Web,2 Mar",
       line:"",
-      night:"per night",
+      night:"Reserve",
     },
     {
       id: 5,
@@ -283,7 +283,7 @@
       price:3412,
       date:"Sun, 20 Feb - tue, 22 Feb",
       line:"",
-      night:"per night",
+      night:"Reserve",
     },
     {
       id: 5,
@@ -296,7 +296,7 @@
       price:8775,
       date:"Sat, 19 Feb - Mon, 21 Feb",
       line:"",
-      night:"per night",
+      night:"Reserve",
     },
     {
       id: 5,
@@ -309,7 +309,7 @@
       price:6300,
       date:"Sat, 19 Feb - Mon,21 Feb",
       line:"",
-      night:"per night",
+      night:"Reserve",
     },
 ];
 localStorage.setItem("expediaData",JSON.stringify(expediaData))
